--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -50,8 +50,12 @@ $bg-content: #f0f0f0;
     &_icon {
       padding: 0.4rem 0.5rem;
       font-size: 20px;
+      transition: transform 0.3s ease
     }
+    
+    
   }
+ 
 
   &_content {
     position: relative;
@@ -64,8 +68,13 @@ $bg-content: #f0f0f0;
     font-size: 16px;
     line-height: 23px;
     animation: slide 1s ease-in;
+
   }
 }
+.open  .collapse_header_icon {
+    transform: rotate(180deg);
+}
+
 
 @media (max-width: 768px) {
   .collapse_content {
