--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -40,7 +40,7 @@ $bg-content: #f0f0f0;
     margin-bottom: 1rem;
     box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
     cursor: pointer;
-
+     height: 47px;
     &_title {
       padding: 0.4rem 0.5rem;
       margin: 0;
