--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,8 +4,8 @@ footer {
     flex-direction: column;
     align-items: center;
     padding: 39px 0px;
+    width: 100% ;
    
-     
     p {
       color: white;
       font-family: "Montserrat";
