--- a/src/Pages/About/About.scss
+++ b/src/Pages/About/About.scss
@@ -13,6 +13,7 @@
         padding-left: 55px;
         padding-right: 55px;
         margin-top: 1.5rem;
+        padding-top: 30px;
         &_content {
             margin-bottom: 0.5rem;
             width: 95%;
