--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,8 +3,10 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 39px 0px;
     width: 100% ;
+    height: 198px;
+    margin-top: 40px;
+    padding-top: 66px;
    
     p {
       color: white;
